# rogue-mayor

./: Cargo.toml  LICENSE.markdown
src/: constants.rs  dijkstra_map.rs  grid.rs  language.rs  lib.rs  main.rs  mobiles.rs  statics.rs  templates.rs  types.rs  utils.rs
src/mobiles/: ai.rs  gen.rs  mod.rs
src/ui/: mod.rs  sdlui.rs
